добавила тэг </html> в конце

--- a/My first project/index.html
+++ b/My first project/index.html
@@ -45,7 +45,7 @@
           <p><strong>Увлечения:</strong></p>
           <p>Изучение вэб-дизайна, иностранных языков (итальянский, английский, в перспективе-немецкий).
           </p>
-
-
-    </body>    
+                             
+     </body>   
+</html>
     
