--- a/lord_of_the_rings/index.html
+++ b/lord_of_the_rings/index.html
@@ -48,7 +48,7 @@
                   </ul>
             </big>    
         </p>  
-        <p><img src="http://github.com/ekaterinaukhanova/homeworks/tree/master/lord_of_the_rings/img1.jpg" width="200" length="100" alt="Text" align="left" 
+        <p><img src="../homeworks/lord_of_the_rings/img1.jpg" width="200" length="100" alt="Text" align="left" 
             vspace="5" hspace="5"><h3><a name="chapter 1">Глава 1 Минас Тирит</a></h3>
             <br>Пиппин выглянул из-под плаща Гэндальфа. Он никак не мог понять, во сне или наяву свистит в ушах черный 
              ночной ветер, медленно плывет зубчатая тень гор далеко справа, во сне или наяву качается у него над 
