--- a/Homeworks_main/index.html
+++ b/Homeworks_main/index.html
@@ -37,7 +37,7 @@
                     </li>
 
                      <li>Урок 7. Верстка первого макета на HTML и CSS.
-                         <br><a href="https://ekaterinaukhanova.github.io/homeworks/lesson_7">Домашнее задание №7</a>
+                         <br><a href="https://ekaterinaukhanova.github.io/homeworks/lesson-7">Домашнее задание №7</a>
                      </li>
                   
             </big>    
